<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cat.xlagunas.calculator.CalculatorActivity">

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="25sp"
        android:padding="16dp"
        android:text="0.00"/>


    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_text_view"
        android:text="7" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_seven"
        android:layout_toEndOf="@id/button_seven"
        android:layout_alignBottom="@id/button_seven"
        android:text="8" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_eight"
        android:layout_toEndOf="@id/button_eight"
        android:layout_alignBottom="@id/button_seven"
        android:text="9" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_seven"
        android:text="4" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_four"
        android:layout_toEndOf="@id/button_four"
        android:layout_alignBottom="@id/button_four"
        android:text="5" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_five"
        android:layout_toEndOf="@id/button_five"
        android:layout_alignBottom="@id/button_four"
        android:text="6" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:text="1" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_one"
        android:layout_toEndOf="@id/button_one"
        android:layout_alignBottom="@id/button_one"
        android:text="2" />

    <Button
        android:id="@+id/button_three"
        android:layout_toRightOf="@id/button_two"
        android:layout_toEndOf="@id/button_two"
        android:layout_alignBottom="@id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_one"
        android:layout_alignStart="@id/button_one"
        android:layout_alignEnd="@id/button_two"
        android:layout_alignLeft="@id/button_one"
        android:layout_alignRight="@id/button_two"
        android:text="0"
        />

    <Button
        android:id="@+id/button_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_zero"
        android:layout_alignBottom="@id/button_zero"
        android:text="." />

    <Button
        android:id="@+id/button_substract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_six"
        android:layout_alignBottom="@id/button_four"
        android:text="-" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:layout_toRightOf="@id/button_nine"
        android:layout_alignBottom="@id/button_seven"/>

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        android:layout_toRightOf="@id/button_nine"
        android:layout_alignBottom="@id/button_zero"
        android:layout_alignTop="@id/button_one"
        />

</RelativeLayout>
